Fix read-only color on dark mode

--- a/assets/assets/css/base.scss
+++ b/assets/assets/css/base.scss
@@ -330,6 +330,10 @@ body.dark {
 			color: $dark-low-emphasis
 		}
 
+		&:read-only {
+			background-color: $dark-dp-24
+		}
+
 	}
 
 	hr {
